// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/Button should do a snapshot test of the default Button DOM 1`] = `
<DocumentFragment>
  <button
    class=" sendbird-button  sendbird-button--primary sendbird-button--big"
    type="button"
  >
    <span
      class="sendbird-button__text sendbird-label sendbird-label--button-1 sendbird-label--color-oncontent-1"
      data-testid="sendbird-label"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`ui/Button should do a snapshot test of the small Button DOM 1`] = `
<DocumentFragment>
  <button
    class=" sendbird-button  sendbird-button--primary sendbird-button--small"
    type="button"
  >
    <span
      class="sendbird-button__text sendbird-label sendbird-label--button-1 sendbird-label--color-oncontent-1"
      data-testid="sendbird-label"
    >
      Button
    </span>
  </button>
</DocumentFragment>
`;
